--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/cadastro.css" />
+    <link rel="stylesheet" href="cadastro.css" />
     <title>Cadastre-se</title>
   </head>
   <body>
@@ -18,6 +18,15 @@
           <p>Aqui a sua compra é certa!!!</p>
         </ul>
       </nav>
+
+      <div class="menu-option">
+        <a href="">Home</a>
+        <a href="">Catálogo</a>
+        <a href="">Comparador</a>
+        <a href="">Comparação</a>
+        <a href="">Carrinho</a>
+        <a href="">Checkout</a>
+      </div>
     </header>
 
     <main>
