atualização do index

--- a/pagina_padrao.html
+++ b/pagina_padrao.html
@@ -30,31 +30,11 @@
       </ul>
     </nav>
 
-    <h2>Catálogo de Modelos de celulares Apple e Xiaomi</h2>
 
-    <div>
-      <label for="brandFilter">Marca:</label>
-      <select id="brandFilter">
-        <option value="">Todas</option>
-        <option value="Marca Xiaomi">Marca Xiaomi</option>
-        <option value="Marca Apple">Marca Apple</option>
-      </select>
+    <h2>AQUI COLOCAR O CONTEUDO  </h2>
 
-      <label for="priceFilter">Preço:</label>
-      <select id="priceFilter">
-        <option value="">Todos</option>
-        <option value="0-2000">Até R$2000</option>
-        <option value="2000-5000">R$2000 - R$5000</option>
-        <option value="5000-7000">R$5000 - R$7000</option>
-        <option value="7000-9000">R$7000 - R$9000</option>
-      </select>
-    </div>
-  </header>
-
-  <main id="catalog"> </main>
-
+    
   <script src="globals/script.js"></script>
-  
 </body>
 
 <footer class="main_footer container">
