Adicionando carrinho css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Catálogo</a></li>
                 <li><a href="#">Comparador</a></li>
                 <li><a href="#">Comparação</a></li>
-                <li><a href="#">Carrinho</a></li>
+                <li><a href="/carrinho.html">Carrinho</a></li>
                 <li><a href="#">Checkout</a></li>
                 <li><a href="#">Cadastro do Usuário</a></li>
             </ul>
