--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="comparador.html">Comparador</a></li>
-        <li><a href="comparacao.html">Comparação</a></li>
+        <li><a href="comparador/comparador.html">Comparador</a></li>
+        <li><a href="comparacao/comparacao.html">Comparação</a></li>
         <li><a href="carrinho/carrinho.html">Carrinho</a></li>
         <li><a href="checkout.html">Checkout</a></li>
         <li><a href="cadastro/cadastro.html">Cadastro do Usuário</a></li>
