add caminho de links entre as paginas

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -22,11 +22,11 @@
     </nav>
 
     <div class="menu-option">
-      <a href="">Home</a>
-      <a href="">Catálogo</a>
-      <a href="">Comparador</a>
-      <a href="">Comparação</a>
-      <a href="">Carrinho</a>
+      <a href="../index.html">Home</a>
+      <a href="../index.html">Catálogo</a>
+      <a href="../comparador/comparador.html">Comparador</a>
+      <a href="../comparacao/comparacao.html">Comparação</a>
+      <a href="carrinho.html">Carrinho</a>
       <a href="">Checkout</a>
     </div>
   </header>
