--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h3 class="titleFooter">Menu</h3>
 
       <ul>
-        <li><a href="index.html" title="Página Inicial">Página Inícial</a></li>
+        <li><a href="index.html" title="Página Inicial">Página Inicial</a></li>
         <li><a href="comparador/comparador.html">Comparador</a></li>
         <li><a href="comparacao/comparacao.html" title="Comparação">Comparação</a></li>
         <li><a href="carrinho/carrinho.html" title="Carrinho">Carrinho</a></li>
