--- a/pagina_padrao.html
+++ b/pagina_padrao.html
@@ -21,8 +21,8 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="comparador/comparador.html">Comparador</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="..comparador/comparador.html">Comparador</a></li>
         <li><a href="comparacao/comparacao.html">Comparação</a></li>
         <li><a href="carrinho/carrinho.html">Carrinho</a> <img src="./images/carrinho.png" width="30"></li>
         <li><a href="checkout.html">Checkout</a></li>
