--- a/comparador/comparador.html
+++ b/comparador/comparador.html
@@ -17,12 +17,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="comparador.html">Comparador</a></li>
-                <li><a href="comparacao.html">Comparação</a></li>
-                <li><a href="carrinho.html">Carrinho</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../comparacao/comparacao.html">Comparador</a></li>
+                <li><a href="../comparador/comparador.html">Comparação</a></li>
+                <li><a href="../carrinho/carrinho.html">Carrinho</a></li>
                 <li><a href="checkout.html">Checkout</a></li>
-                <li><a href="cadastro.html">Cadastro do Usuário</a></li>
+                <li><a href="../cadastro/cadastro.html">Cadastro do Usuário</a></li>
             </ul>
         </nav>
         <br>
@@ -102,13 +102,12 @@
             <div class="colfooter">
                 <h3 class="titleFooter">Menu</h3>
                 <ul>
-                    <li><a href="#" title="Página Inícial">Página Inícial</a></li>
-                    <li><a href="#" title="Catálogo">Catálogo</a></li>
-                    <li><a href="#" title="Comparação">Comparação</a></li>
-                    <li><a href="#" title="Carrinho">Carrinho</a></li>
-                    <li><a href="#" title="Checkout">Checkout</a></li>
-                    <li><a href="#" title="Cadastro de Usuário">Cadastro de Usuário</a></li>
-                </ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../comparacao/comparacao.html">Comparador</a></li>
+                    <li><a href="../comparador/comparador.html">Comparação</a></li>
+                    <li><a href="../carrinho/carrinho.html">Carrinho</a></li>
+                    <li><a href="checkout.html">Checkout</a></li>
+                    <li><a href="../cadastro/cadastro.html">Cadastro do Usuário</a></li>
             </div>
             <div class="colfooter">
                 <h3 class="titleFooter">Contato</h3>
@@ -118,14 +117,14 @@
             </div>
             <div class="colfooter">
                 <h3 class="titleFooter">Redes Sociais</h3>
-                <img src="images/insta.png" width="30"> 
-                <img src="images/face.png" width="30"> 
-                <img src="images/what.png" width="30"> 
+                <img src="/images/insta.png" width="30"> 
+                <img src="/images/face.png" width="30"> 
+                <img src="/images/what.png" width="30"> 
             </div>
             <div class="clear"></div>
         </div>
         <div class="main_footer_copy">
-            <img src="images/logo preto.png" alt="logo" width="150px">
+            <img src="/images/logo preto.png" alt="logo" width="150px">
             <p class="m-b-footer">SmartBuy - 2024, todos os direitos reservados.</p> 
             <p>Desenvolvido por: Projeto integrador Grupo 1</p>
         </div>
