--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -32,12 +32,11 @@
       <nav>
         <ul>
           <li><a href="/index.html">Home</a></li>
-          <li><a href="#">Catálogo</a></li>
-          <li><a href="/comparador/comparador.html">Comparador</a></li>
-          <li><a href="/comparacao/comparacao.html">Comparação</a></li>
-          <li><a href="/carrinho/carrinho.html">Carrinho</a></li>
-          <li><a href="/">Checkout</a></li>
-          <li><a href="/cadastro/cadastro.html">Cadastro do Usuário</a></li>
+          <li><a href="../comparador/comparador.html">Comparador</a></li>
+          <li><a href="../comparacao/comparacao.html">Comparação</a></li>
+          <li><a href="../carrinho/carrinho.html">Carrinho</a></li>
+          <li><a href="../checkout">Checkout</a></li>
+          <li><a href="../cadastro/cadastro.html">Cadastro do Usuário</a></li>
         </ul>
       </nav>
 
