--- a/comparacao/comparacao.html
+++ b/comparacao/comparacao.html
@@ -30,22 +30,22 @@
     <main>
         <section class="comparison-display">
             <div class="cart-section">
-                <img src="images/cart.png" alt="Carrinho" class="cart-icon">
+                <img src="/images/cart.png" alt="Carrinho" class="cart-icon">
                 <p>Carrinho</p>
             </div>
             <div class="phones-comparison">
                 <div class="phone-card">
-                    <img src="images/xiaomi-redmi-13c.png" alt="Xiaomi Redmi 13C">
+                    <img src="/images/capa2.jpg" alt="Xiaomi Redmi 13C">
                     <p class="phone-name">Xiaomi 13C 8GB</p>
                     <p class="phone-price">1300,00R$</p>
                 </div>
                 <div class="phone-card">
-                    <img src="images/iphone-16-pro-max.png" alt="iPhone 16 Pro Max">
+                    <img src="/images/capa2.jpg" alt="iPhone 16 Pro Max">
                     <p class="phone-name">iPhone 16 PRO Max</p>
                     <p class="phone-price">1300,00R$</p>
                 </div>
                 <div class="phone-card">
-                    <img src="images/add-phone-placeholder.png" alt="Adicionar celular">
+                    <img src= "/images/capa2.jpg" alt="Adicionar celular">
                 </div>
             </div>
         </section>
@@ -109,9 +109,9 @@
       
           <div class="colfooter">
             <h3 class="titleFooter">Redes Sociais</h3>
-            <img src="../images/insta.png" width="30">
-            <img src="../images/face.png" width="30">
-            <img src="../images/what.png" width="30">
+            <img src="/images/insta.png" width="30">
+            <img src="/images/face.png" width="30">
+            <img src="/images/what.png" width="30">
           </div>
       
           <div class="clear"></div>
@@ -123,6 +123,5 @@
           <p></i>Desenvolvido por: Projeto integrador Grupo 1</a></p>
         </div>
       </footer>
-    <script src="globals/script.js"></script>
 </body>
 </html>
