--- a/comparador/comparador.html
+++ b/comparador/comparador.html
@@ -34,15 +34,15 @@
         <section class="comparison-section">
             <div class="comparison-area">
                 <div class="phone-slot">
-                    <img src="images/apple5.webp" alt="Adicionar celular" class="placeholder">
+                    <img src="/images/apple5.webp" alt="Adicionar celular" class="placeholder">
                 </div>
                 <div class="plus-sign">+</div>
                 <div class="phone-slot">
-                    <img src="images/capa2.jpg" alt="Adicionar celular" class="placeholder">
+                    <img src="/images/capa2.jpg" alt="Adicionar celular" class="placeholder">
                 </div>
                 <div class="plus-sign">+</div>
                 <div class="phone-slot">
-                    <img src="images/capa2.jpg" alt="Adicionar celular" class="placeholder">
+                    <img src="/images/capa2.jpg" alt="Adicionar celular" class="placeholder">
                 </div>
                 <div>
                     <button class="compare-button">Comparar</button>
@@ -56,17 +56,17 @@
                     <h3>Lançamentos</h3>
                     <ul>
                         <li>
-                            <img src="images/capa2.jpg" alt="Xiaomi Redmi 13C">
+                            <img src="/images/capa2.jpg" alt="Xiaomi Redmi 13C">
                             <p>Xiaomi Redmi 13C</p>
                             <button class="add-button">+</button>
                         </li>
                         <li>
-                            <img src="images/capa2.jpg" alt="Xiaomi Redmi 13C">
+                            <img src="/images/capa2.jpg" alt="Xiaomi Redmi 13C">
                             <p>Xiaomi Redmi 13C</p>
                             <button class="add-button">+</button>
                         </li>
                         <li>
-                            <img src="images/capa2.jpg" alt="Xiaomi Redmi 13C">
+                            <img src="/images/capa2.jpg" alt="Xiaomi Redmi 13C">
                             <p>Xiaomi Redmi 13C</p>
                             <button class="add-button">+</button>
                         </li>
@@ -76,17 +76,17 @@
                     <h3>Mais Comprados</h3>
                     <ul>
                         <li>
-                            <img src="images/xiaomi1.webp" alt="Xiaomi Redmi 13C">
+                            <img src="/images/xiaomi1.webp" alt="Xiaomi Redmi 13C">
                             <p>Xiaomi Redmi 13C</p>
                             <button class="add-button">+</button>
                         </li>
                         <li>
-                            <img src="images/capa2.jpg" alt="Xiaomi Redmi 13C">
+                            <img src="/images/capa2.jpg" alt="Xiaomi Redmi 13C">
                             <p>Xiaomi Redmi 13C</p>
                             <button class="add-button">+</button>
                         </li>
                         <li>
-                            <img src="images/apple1.webp" alt="Xiaomi Redmi 13C">
+                            <img src="/images/apple1.webp" alt="Xiaomi Redmi 13C">
                             <p>Xiaomi Redmi 13C</p>
                             <button class="add-button">+</button>
                         </li>
