--- a/comparacao/comparacao.html
+++ b/comparacao/comparacao.html
@@ -29,10 +29,6 @@
 
     <main>
         <section class="comparison-display">
-            <div class="cart-section">
-                <img src="/images/cart.png" alt="Carrinho" class="cart-icon">
-                <p>Carrinho</p>
-            </div>
             <div class="phones-comparison">
                 <div class="phone-card">
                     <img src="/images/capa2.jpg" alt="Xiaomi Redmi 13C">
@@ -46,6 +42,8 @@
                 </div>
                 <div class="phone-card">
                     <img src= "/images/capa2.jpg" alt="Adicionar celular">
+                    <p class="phone-name"> Adicionar </p>
+                    <p class="phone-price">+</p>
                 </div>
             </div>
         </section>
