--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -25,7 +25,6 @@
     <header>
       <div class="header-capa">
         <h1>SmartBuy</h1>
-        <img src="/images/logo_sb_branco-removebg-preview.png" />
         <p class="banner">Aqui a sua compra é certa!!!</p>
       </div>
 
@@ -50,7 +49,7 @@
           <div class="buttonsForm">
             <div class="btnColor"></div>
             <button id="btnSignin">Login</button>
-            <button id="btnSignup">Cadastre-se</button>
+            <button id="btnSignup">Cadastrar</button>
           </div>
 
           <form id="signin">
@@ -120,5 +119,7 @@
         <p></i>Desenvolvido por: Projeto integrador Grupo 1</a></p>
       </div>
     </footer>
+
+    <script src="cadastro.js"></script>
   </body>
 </html>
