--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -53,14 +53,15 @@
           </div>
 
           <form id="signin">
-            <input type="email" placeholder="E-mail" required />
+            <input type="email" id="emailIn" placeholder="E-mail" required />
             <i class="fa-solid fa-envelope"></i>
-            <input type="password" placeholder="Senha" required />
+            <input type="password" id="passwordIn" placeholder="Senha" required />
             <i class="fa-solid fa-lock"></i>
             <div class="div-Check">
               <input type="checkbox" />
               <span>Lembrar Senha</span>
             </div>
+            <p id="mensagem"></p>
             <button type="submit">Entrar</button>
           </form>
 
